--- a/CHANGES
+++ b/CHANGES
@@ -9,6 +9,15 @@ You can view the differences in tagged versions as follows:
   git log --pretty=format:"%Cblue%h %Cgreen%cn %Cred(%cr) %Creset%s %n%b %N" --graph "v0.3.2..v0.4.1"
 
 
+
+
+v0.21.2
+-------
+
+ - Fixed
+   - library.including_transition: identify angles
+
+
 v0.21.1
 -------
 
